# bhumi

./: Cargo.toml  LICENSE  README.md
bhumi-ble/: Cargo.toml
bhumi-ble-controller/: Cargo.toml
bhumi-ble-controller/src/: ble.rs  lib.rs
bhumi-ble/src/: main.rs
bhumi-device/: Cargo.toml
bhumi-device/examples/: smart-switch.rs  switch-owner.rs
bhumi-device/src/: commits.rs  connection.rs  identity.rs  lib.rs  main.rs  state.rs
bhumi-esp32/: Cargo.toml  sdkconfig.defaults
bhumi-esp32/src/: ble.rs  connection.rs  main.rs  switch.rs
bhumi-hub/: Cargo.toml
bhumi-hub/src/: get_dependencies.rs  http.rs  id52.rs  lib.rs  main.rs  p2p.rs  render.rs  scanner.rs  steel.rs
bhumi-kaya/: GRAMMAR.md  README.md  index.html  kaya.js
bhumi-mcu/: Cargo.toml
bhumi-mcu/src/: ble.rs  lib.rs  storage.rs  wifi.rs
bhumi-node/: Cargo.toml
bhumi-node/examples/: smart-switch.rs  switch-controller.rs
bhumi-node/src/: connection.rs  lib.rs  node.rs
bhumi-person/: Cargo.toml
bhumi-person/examples/: switch-owner.rs
bhumi-person/src/: lib.rs
bhumi-proto/: Cargo.toml
bhumi-proto/src/: ble.rs  lib.rs
bhumi-relay/: Cargo.toml
bhumi-relay/src/: main.rs  router.rs  server.rs  session.rs
docs/: bhumi-device-protocol.md  bhumi-relay-protocol.md
examples/esp32-smart-switch/: .gitignore  Cargo.toml  sdkconfig.defaults
examples/esp32-smart-switch/.cargo/: config.toml
examples/esp32-smart-switch/src/: ble.rs  connection.rs  main.rs  state.rs
examples/switch-controller/: Cargo.toml
examples/switch-controller/src/: main.rs
fastn-id52/: Cargo.toml
fastn-id52/src/: keys.rs  lib.rs
