[workspace]
members = ["bhumi-hub", "bhumi-node", "bhumi-proto", "bhumi-relay", "fastn-id52"]
exclude = []
resolver = "2"

[workspace.package]
authors = ["Amit Upadhyay <upadhyay@gmail.com>"]
edition = "2024"
description = "bhumi"
license = "UPL-1.0"
repository = "https://github.com/bhumi-stack/bhumi"
homepage = "https://bhumi.ltd"
rust-version = "1.92"

[profile.release]
# Enabling this descreased our binary size from 30M to 27M on linux (as of 12th Jun 2023).
# The build time went up (no objective data). Disabling it for now. It made a huge difference
# in fastn-wasm-runtime wasm size (without lto: 2.1M with lto: 518K).

strip = true
# lto = true
# opt-level = "z"
# panic = "abort"

[workspace.dependencies]
# Please do not specify a dependency more precisely than needed. If version "1" works, do
# not specify "1.1.42". This reduces the number of total dependencies. For example, if you
# specify 1.1.42 and someone else who only needed "1" also specified 1.1.37, we end up having
# the same dependency getting compiled twice.
#
# In the future, we may discover that our code does not indeed work with "1", say it ony works
# for 1.1 onwards, or 1.1.25 onwards, in which case use >= 1.1.25 etc. Saying our code
# only works for 1.1.42 and not 1.1.41 nor 1.1.43 is really weird, and most likely wrong.
#
# If you are not using the latest version intentionally, please do not list it in this section
# and create its own [dependencies.<name>] section. Also, document it with why are you not
# using the latest dependency, and what is the plan to move to the latest version.

hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cookie = "0.18"
thiserror = "2"
fastn-id52 = { path = "fastn-id52" }
bhumi-node = { path = "bhumi-node" }
bhumi-proto = { path = "bhumi-proto" }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
data-encoding = "2"
rand = "0.8"
keyring = "3"
dirs = "6"
