[package]
name = "bhumi-ble-controller"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "BLE client for provisioning Bhumi IoT devices"
license.workspace = true

[dependencies]
bhumi-proto = { path = "../bhumi-proto" }
btleplug = "0.11"
tokio = { workspace = true }
uuid = "1"
