[package]
name = "bhumi-ble"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "BLE provisioning tool for Bhumi devices"
license.workspace = true

[[bin]]
name = "bhumi-ble"
path = "src/main.rs"

[dependencies]
btleplug = "0.11"
tokio = { workspace = true }
clap = { workspace = true }
uuid = "1"
futures = "0.3"
