[package]
name = "bhumi-device"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
name = "bhumi_device"
path = "src/lib.rs"

[[example]]
name = "smart-switch"
path = "examples/smart-switch.rs"

[[example]]
name = "switch-owner"
path = "examples/switch-owner.rs"

[dependencies]
bhumi-proto = { workspace = true }
fastn-id52 = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26"
rustls = "0.23"
sha2 = { workspace = true }
rand = { workspace = true }
data-encoding = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
