[package]
name = "bhumi-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper.workspace = true
hyper-util.workspace = true
tokio.workspace = true
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
cookie.workspace = true
thiserror.workspace = true
fastn-id52.workspace = true
clap.workspace = true
dirs.workspace = true
