[package]
name = "bhumi-person"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
name = "bhumi_person"
path = "src/lib.rs"

[[example]]
name = "switch-owner"
path = "examples/switch-owner.rs"

[dependencies]
bhumi-node = { workspace = true }
bhumi-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
data-encoding = { workspace = true }
