[package]
name = "bhumi-relay"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
bhumi-proto = { workspace = true }
fastn-id52 = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
sha2 = { workspace = true }
rand = { workspace = true }
data-encoding = { workspace = true }
